# Investo

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/: confidence.md
examples/: claude_desktop_config.json  cursor_mcp.json
scripts/: build_mcpb.ps1  build_mcpb.sh  mcp_launcher.py  validate_peers.py
src/investo/: __init__.py  cli.py  config.py  export.py  logging_config.py  models.py  resolve.py  server.py
src/investo/analysis/: __init__.py  buffett.py  dcf.py  evidence.py  finutils.py  growth.py  industry.py  management.py  moat.py  multi.py  ownership.py  peers.py  ratios.py  redflags.py  relative.py  report.py  report_html.py  risk.py  scoring.py  sensitivity.py  technical.py  thesis.py  trends.py
src/investo/data/: __init__.py  growth.yaml  industry.yaml  peers.yaml
src/investo/render/: __init__.py  charts.py  css.py  fmt.py  html.py  sections.py
src/investo/sources/: __init__.py  data.py  india_holdings.py  india_symbols.py  keyed.py  news.py  ratelimit.py  sec_edgar.py  yahoo.py
tests/: test_buffett.py  test_cli.py  test_config.py  test_data_facade.py  test_dcf.py  test_evidence.py  test_export.py  test_growth.py  test_industry.py  test_multi_compare.py  test_news.py  test_peers.py  test_ratelimit.py  test_ratios.py  test_redflags.py  test_relative.py  test_render_charts.py  test_render_html.py  test_report_helpers.py  test_resolve.py  test_scoring.py  test_sections.py  test_sensitivity.py  test_server_tools.py  test_shareholding.py  test_technical.py  test_thesis.py  test_trends.py  test_validation.py
