[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investo"
version = "0.1.0"
description = "AI investment-analysis agent (MCP server) — financials, ratios, peers, DCF, moat, risk and a 0-100 rating for NSE/BSE and global companies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yashvant Hange" }]
keywords = ["mcp", "investing", "finance", "nse", "bse", "stocks", "valuation", "dcf"]

dependencies = [
    "mcp[cli]>=1.2.0",
    "yfinance>=0.2.40",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.6.0",
    "feedparser>=6.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
investo = "investo.cli:main"
investo-mcp = "investo.server:main"

[project.urls]
Homepage = "https://github.com/YashvantHange/Investo"
Repository = "https://github.com/YashvantHange/Investo"

[tool.hatch.build.targets.wheel]
packages = ["src/investo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
